doc: add the first impl plan

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/hirakinii/kaken-api-client-typescript.git"
   },
   "keywords": [],
-  "author": "hirakinii",
+  "author": "hirakinii & Claude",
   "license": "MIT",
   "type": "commonjs",
   "bugs": {
