--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint '{src,examples}/**/*.{ts,tsx}'",
-    "format": "prettier --write '{src,examples}/**/*.{ts,tsx}'",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint '{src,tests}/**/*.{ts,tsx}'",
+    "format": "prettier --write '{src,tests}/**/*.{ts,tsx}'",
+    "build": "tsc",
     "type-check": "tsc --noEmit"
   },
   "repository": {
@@ -16,7 +19,7 @@
   "keywords": [],
   "author": "hirakinii & Claude",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/hirakinii/kaken-api-client-typescript/issues"
   },
@@ -24,11 +27,17 @@
   "devDependencies": {
     "@types/node": "^25.3.0",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^5.3.7",
+    "zod": "^4.3.6"
   }
 }
