--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     // Other Outputs
     "sourceMap": true,
     "declaration": true,
+    "inlineSources": true,
     "declarationMap": true,
 
     // Stricter Typechecking Options
